[package]
name = "scan_dir"
description = """
    A easier read_dir, useful for reading directory of config files
"""
version = "0.1.0"
keywords = ["dir", "directory", "glob", "read_dir", "walk"]
authors = ["Paul Colomiets <paul@colomiets.name>"]
documentation = "http://tailhook.github.com/scan_dir"
homepage = "http://github.com/tailhook/scan_dir"

[dependencies]
quick-error = '0.1.3'
