[package]
name = "scan_dir"
description = """
    A easier read_dir and recursive directory walker,
    useful for reading directory of config files
"""
version = "0.3.3"
keywords = ["dir", "directory", "glob", "read_dir", "walk"]
authors = ["Paul Colomiets <paul@colomiets.name>"]
documentation = "http://tailhook.github.com/scan_dir/"
homepage = "http://github.com/tailhook/scan_dir"
license = "MIT/Apache-2.0"

[dependencies]
quick-error = '1.0.0'
